# Antimatter

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  ZERO_TRUST.md  antimatter_codebase_analysis.md  mkdocs.yml  patch.diff  terminal.md  testing.md
.github/: FUNDING.yml  labels.yml
.github/ci-logs/: DASHBOARD.md  workflow_logs.csv
.github/workflows/: android-ci.yml  build-extension.yml  ci.yml  (+10 more)
adapters/: CHANGELOG.md
android/: .gitignore  CHANGELOG.md  README.md  antimatter_logcat.txt  build.gradle.kts  gradle.properties  settings.gradle.kts
antimatter_app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
antimatter_extension/: README.md  build.mjs  install-extension.sh  package-lock.json  package.json  test-tracker.ts  test_ws.mjs
audit/: REJECTED.md  REVEIW_REQUIRED.md  UNVERIFIED.md  VERIFIED.md
claude/: package-lock.json  package.json
core/: CHANGELOG.md  pyproject.toml
core/gateway/: pyproject.toml
core/gateway/src/antimatter_gateway/: pty_manager.py  qr.py  router.py  server.py  tunnel.py
docs/: ADAPTERS.md  ANDROID.md  ANTIGRAVITY_2_0.md  ARCHITECTURE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  FEATURES.md  GETTING_STARTED.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  ZERO_TRUST.md  astro.config.mjs  index.md  macos_kvm_bridge.md  package-lock.json  package.json
extension/: jest.config.js  package-lock.json  package.json  tsconfig.json
ios/: AntimatterApp.swift  AppCoordinator.swift  CHANGELOG.md
plugin/: README.md  pyproject.toml
(+191 files in other folders)
